djaoapp/static/css/custom.css
body
{
    min-width: auto;
    min-height: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.dashboard-nav-menu > .nav > li > a,
.dashboard-nav-menu > .nav > li.active > a {
    font-size: 14px;
    text-decoration: none;
    height: auto;
    padding: 11px 15px;
}

.dashboard-nav-menu > .nav > li > a
{
    color: #333;
    border-radius: 0;
}

.dashboard-nav-color-theme
{
    background: #f3f3f3;
    color: #333;
    border-right: 1px solid #e9e9e9;
}

.dashboard-nav-menu > .nav > li.active > a,
.dashboard-nav-menu > .nav > li.active > a:hover
{
    background: none !important;
    color: #337ab7 !important;
}

.dashboard-nav-menu > .nav > li > a:hover
{
    background: none !important;
    color: #666 !important;
    text-decoration: none !important;
    -webkit-transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	transition: all 0.2s ease-in-out;
}

.dashboard-nav hr {
    margin: 5px 0;
    border: 0;
    border-top: 1px solid #e9e9e9;
}

.dashboard-nav-menu > .nav{
   margin-left: 0;
}



.footer
{
    border-top: 1px solid #e9e9e9;
    margin-top: 0;
    font-size: 13px;
    background: #fff;
    color: #333;
    padding: 10px;
    height: auto;
    clear: none;
    position: static;
}

.dashboard-nav-menu>.nav>li
{
    margin: 0;
}

.dashboard-nav-menu>.nav>li>a>i
{
    margin-right: 10px;
    margin-left: 10px;
    font-size: 18px;
    vertical-align: -1px;
}

.dashboard-content h2
{
    margin-top: 5px;
}

.navbar-default .navbar-brand-logo>img
{
    height: 32px;
    margin-top: 6px;
}

.dashboard-home-title
{
    border-bottom: 1px solid #e0e0e0;
}

.no-results
{
    color: #888;
    text-align: center;
    padding: 20px 10px;
    margin: 0;
    font-size: 14px;
}

.fa-spin.fa-refresh
{
    color: #888;
}

.table>tbody+tbody
{
    border-top: 0;
}

.table th,
.table td
{
    border-top: 0 !important;
    padding: 10px 15px !important;
}

.table th
{
    border-bottom: 1px solid #e0e0e0 !important;
}

.empty-table
{
    background: none !important;
}

.empty-table td
{
    padding: 0 !important;
}

.filter-inline
{
    display: inline-block;
    width: 20%;
}

.dashboard-header
{
    margin: 20px 0;
    font-size: 16px;
}

.dashboard-header p
{
    color: #777;
    margin: 0;
}

.dashboard-header h2
{
    margin: 10px 0 15px;
}

.navbar .navbar-nav a
{
    color: #2f4f4f !important;
}

.footer-links
{
    margin-bottom: 10px;
}

.footer-links a
{
    margin: 0 5px;
    font-size: 14px;
}

#transactions > h3
{
    margin-bottom: 30px;
}

.sidebar-logo
{
    padding: 15px 15px 15px 25px;
    border-bottom: 1px solid #e9e9e9;
    width: 220px;
    height: 61px;
}

.sidebar-logo a
{
    float: none;
}

.sidebar-logo img
{
    width: 30px;
}

.sidebar-footer-links
{
    margin-top: 10px;
}

.sidebar-footer-links a
{
    margin: 0 3px;
}

.sidebar-footer-links a:first-child
{
    margin-left: 0;
}

.sidebar-footer-links a:last-child
{
    margin-right: 0;
}

.sidebar-footer
{
    color: #666;
    padding: 10px 30px 10px;
    font-size: 11px;
    width: 220px;
    position: absolute;
    bottom: 0;
    right: 0;
    border-top: 1px solid #e9e9e9;
}

.dashboard-inner-container
{
    display: flex;
    float: none;
    position: static;
    left: auto;
    height: 100%;
    width: 100%;
}

.dashboard-nav
{
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    overflow: visible;
    position: fixed;
    top: 0;
    bottom: 0;
    z-index: 5;
    height: 100%;
    box-shadow: 10px 0 100px #ccc;
    left: -300px;
}

.dashboard-content
{
    /*padding: 30px 40px;*/
    display: block;
    overflow: visible;
    vertical-align: baseline;
    width: 100%;
}

.right-spacer
{
    background-color: #fff;
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    display: none;
}

.dashboard-header-menu
{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.dashboard-header-menu .navbar-toggle
{
    background: #eee;
    margin: 0;
}

.dashboard-header-menu .navbar-toggle .icon-bar
{
    background: #888;
}

.dashboard-menubar .menubar-dropdown-toggle
{
    display: block;
    line-height: 1em;
    background: #efefef;
    padding: 10px 30px;
    border-radius: 3px;
    font-size: 13px;
}

.dashboard-menubar .menubar .dropdown-menu
{
    left: auto;
    right: 0;
    margin: 10px 0 0;
}

.menubar .dropdown-menu .divider
{
    margin: 5px 0;
}

.dashboard-overlay
{
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 4;
    display: none;
    left: 0;
    top: 0;
}

.dashboard-sidebar-overlay
{
    opacity: 0.3;
    background: #fff;
}

.dashboard-menubar-overlay
{
    z-index: 4;
}

.menubar-dropdown-container
{
    z-index: 5;
}

.menubar-dropdown-container .dropdown-menu
{
    z-index: 6;
    white-space: nowrap;
}

.nvtooltip
{
    z-index: 3;
}

.dashboard-nav .dashboard-nav-menu
{
    display: block;
    position: absolute;
    top: 61px;
    right: 0;
    width: 220px;
    bottom: 90px;
    bottom: 80px;
    overflow-y: auto;
}

.dashboard-nav .collapse-sidebar
{
    position: absolute;
    right: -61px;
    top: 0;
}

.dashboard-nav .collapse-sidebar a
{
    display: block;
    color: #fefefe;
    text-decoration: none;
    font-size: 28px;
    height: 61px;
    line-height: 61px;
    width: 61px;
    background: #ccc;
    border-radius: 0 0 5px 0;
    text-align: center;
    /* alternate version
    width: 31px;
    box-shadow: 10px 2px 60px #bbb;
    font-size: 18px;*/
}

.dashboard-nav .collapse-sidebar a:hover
{
    background: #ddd;
}

.menubar .dropdown-menu
{
    left: 15px;
    right: auto;
    margin: -2px 0 0;
}

.menubar .dropdown-menu li a
{
    width: 200px;
    padding: 5px 25px;
}

.menubar
{
    position: relative;
}

.menubar .dropdown-label
{
    color: #888;
    text-transform: lowercase;
    padding: 2px 25px;
    font-size: 13px;
}

.menubar .dropdown-label .dropdown-label-role
{
    color: #fff;
    margin-left: 10px;
    background: #337ab7cc;
    border-radius: 3px;
    padding: 0 5px;
    font-size: 12px;
    display: inline-block;
}

.menubar-org
{
    display: block;
    margin-bottom: 5px;
    font-size: 16px;
    color: #555;
}

.menubar-username
{
    color: #777;
}

.navbar-logo
{
    display: none;
    position: absolute;
    left: -16px;
    margin-left: 50%;
    opacity: 0.9;
}

.navbar-logo img
{
    width: 32px;
}

.dashboard-top-navigation
{
    display: flex;
}

.dashboard-top-menu
{
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    margin-right: 15px;
    display: none;
}

.dashboard-top-menu li
{
    margin: 0 10px;
    font-size: 15px;
}

.app-top-navigation
{
    display: flex;
    float: right;
    align-items: center;
}

.app-top-navbar
{
    padding: 10px 25px;
    border-bottom: 1px solid #eee;
}

.app-top-navigation .dashboard-top-menu
{
    min-height: 51px;
}

@media (max-width: 1199px)
{
    .navbar-logo
    {
        display: block;
    }

    .dashboard-header-menu
    {
        position: fixed;
        width: 100%;
        left: 0;
        top: 0;
        right: 0;
        height: 64px;
        border-bottom: 1px solid #e9e9e9;
        padding: 0 15px;
        background: white;
        z-index: 5;
    }

    .dashboard-nav
    {
        top: 64px;
    }

    .dashboard-header
    {
        margin-top: 84px;
    }

    .dashboard-nav .dashboard-nav-menu
    {
        top: 0;
        bottom: 140px;
    }

    .sidebar-logo
    {
        display: none;
    }

    .menubar-org
    {
        font-size: 15px;
    }

    .dashboard-menubar .menubar-dropdown-toggle
    {
        font-size: 12px;
        padding: 8px 25px;
    }

    .sidebar-footer
    {
        bottom: 64px;
    }

    .dashboard-menubar .menubar .dropdown-menu
    {
        margin: 5px 0 0;
    }
}

@media (min-width: 768px)
{
    .dashboard-header-menu .navbar-toggle
    {
        display: block;
    }

    .app-top-navbar .dashboard-top-menu
    {
        display: flex;
    }
}

@media (min-width: 1200px)
{
    .dashboard-top-menu
    {
        display: flex;
    }

    .dashboard-nav
    {
        position: -webkit-sticky;
        position: sticky;
        -webkit-box-flex: 0;
        -ms-flex: 0;
        flex: 0;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex !important;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-align: end;
        -ms-flex-align: end;
        align-items: flex-end;
        width: 100%;
        min-width: 220px;
        height: 100vh;
        top: 0;
        box-shadow: none;
        left: 0;
    }

    .dashboard-nav .dashboard-nav-menu
    {
        top: 61px;
    }

    .dashboard-inner-container
    {
        display: grid;
        grid-template-columns: minmax(220px,calc(50% - 360px)) 960px 1fr;
    }

    .right-spacer
    {
        display: block;
    }

    body
    {
        height: auto;
    }

    .dashboard-content
    {
        width: auto;
    }

    .dashboard-content .container
    {
        width: 960px;
    }

    .dashboard-header-menu
    {
        margin-bottom: 0;
        justify-content: flex-end;
    }

    .dashboard-header-menu .navbar-toggle
    {
        display: none;
    }
}

